bitfields/tests/compile_error_cases/errors/arrays/array_fields_too_few_bits.rs
use bitfields::bitfield;

#[bitfield([u8; 2])]
pub struct Bitfield {
    a: u8,
}

fn main() {}

