bitfields/tests/compile_error_cases/errors/arrays/array_fields_too_few_bits.stderr
error: The total number of bits of the fields '8 bits' is less than the number of bits of the bitfield '[u8;2] (16 bits)', you can add a reserved field (prefixed with '_') to fill the remaining '8 bits'.
 --> tests/compile_error_cases/errors/arrays/array_fields_too_few_bits.rs:3:12
  |
3 | #[bitfield([u8; 2])]
  |            ^^^^^^^
